# YourDocScanner

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/chs/yourdocscanner/: Extenstions.kt  MainActivity.kt  MainNavDisplay.kt  OpenCVBridge.kt  ScanRepository.kt  YourDocScannerApplication.kt  YourDocScannerScreens.kt
app/src/main/java/com/chs/yourdocscanner/crop/: CropEffect.kt  CropIntent.kt  CropOverlay.kt  CropScreen.kt  CropState.kt  CropUtil.kt  CropViewModel.kt  DisplayQuad.kt
app/src/main/java/com/chs/yourdocscanner/permission/: PermssionScreen.kt
app/src/main/java/com/chs/yourdocscanner/result/: ScanResultEffect.kt  ScanResultIntent.kt  ScanResultScreen.kt  ScanResultState.kt  ScanResultViewModel.kt
app/src/main/java/com/chs/yourdocscanner/scan/: CameraPreview.kt  CaptureResult.kt  DetectQuad.kt  DocumentAnalyzer.kt  DocumentScanIntent.kt  DocumentScanScreen.kt  DocumentScanViewModel.kt  DocumentState.kt  DocumnetOverlay.kt  ScanEffect.kt
app/src/main/java/com/chs/yourdocscanner/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
